[package]
name = "anarchic-image-hosting-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["full"] }
teloxide = { version = "0.13.0", features = ["macros"] }
teloxide-macros = "^0.8"
actix-multipart = "0.7.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
json5 = "0.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
log = "0.4.22"
env_logger = "0.11.5"
tokio-util = { version = "0.7.12", features = ["rt", "codec"] }
sanitize-filename = "0.5.0"
futures-util = "0.3.31"